# erpl-adt

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  README.md  vcpkg.json
.beads/: issues.jsonl
.github/workflows/: build.yaml  release.yaml
bin-to-wheel/: README.md  pyproject.toml
bin-to-wheel/bin_to_wheel/: __init__.py  __main__.py
bin-to-wheel/tests/: conftest.py  test_cli.py  test_generated.py  test_hashing.py  test_integration.py  test_naming.py  test_platform.py  test_wheel_build.py
docker/: Dockerfile  docker-compose.yaml
docs/: adt-protocol-spec.md  architecture.md  bw-lineage-contract-v3.md  bw-protocol-spec.md  cli-usage.md  read-query-baseline-audit.md  spec.md  spec2.md
docs/openapi/: adt-openapi.yaml
examples/: flight.yaml  multi-repo.yaml
scripts/: capture_adt.sh  smoke_test.sh
src/: main.cpp
src/adt/: abapgit.cpp  activation.cpp  adt_session.cpp  adt_utils.hpp  atom_parser.hpp  bw_activation.cpp  bw_context_headers.cpp  bw_dataflow.cpp  bw_discovery.cpp  bw_endpoint_resolver.cpp  bw_export.cpp  bw_hints.cpp  bw_jobs.cpp  bw_lineage.cpp  bw_lineage_graph.cpp  bw_lineage_planner.cpp  (+28 more)
test/: CMakeLists.txt
test/adt/: test_abapgit.cpp  test_activation.cpp  test_adt_session.cpp  test_adt_session_mock.cpp  test_bw_activation.cpp  test_bw_dataflow.cpp  test_bw_discovery.cpp  test_bw_endpoint_resolver.cpp  test_bw_export.cpp  test_bw_hints.cpp  test_bw_jobs.cpp  test_bw_lineage.cpp  test_bw_lineage_graph.cpp  test_bw_lineage_planner.cpp  test_bw_locks.cpp  test_bw_nodes.cpp  test_bw_object.cpp  test_bw_query.cpp  test_bw_repo_utils.cpp  test_bw_reporting.cpp  test_bw_rsds.cpp  test_bw_search.cpp  test_bw_system.cpp  test_bw_transport.cpp  test_bw_transport_collect.cpp  test_bw_validation.cpp  test_bw_valuehelp.cpp  test_bw_xref.cpp  test_checks.cpp  test_classrun.cpp  test_ddic.cpp  test_discovery.cpp  test_locking.cpp  test_object.cpp  test_packages.cpp  test_parser_contracts.cpp  test_search.cpp  test_session_persistence.cpp  test_source.cpp  test_source_edit.cpp  (+3 more)
test/cli/: test_cli_examples.cpp  test_command_executor.cpp  test_command_help_completeness.cpp  test_command_router.cpp  test_credentials.cpp  test_output_formatter.cpp
test/config/: test_config_loader.cpp
test/core/: test_log.cpp  test_result.cpp  test_terminal.cpp  test_types.cpp  test_url.cpp
test/integration_py/: adt_client.py  cli_runner.py  conftest.py  pyproject.toml  pytest.ini  requirements.txt  test_00_health.py  test_01_discovery.py  test_02_search.py  test_03_transport.py  test_04_object.py  test_05_locking.py  test_06_source.py  test_07_testing.py  test_08_checks.py  test_09_ddic.py  test_10_activation.py  test_11_bw.py  test_11_bw_discover.py  test_12_protocol_contracts.py  test_13_bw_read.py  test_14_bw_transport.py  test_15_bw_xref.py  test_16_bw_lifecycle.py  test_17_bw_lineage.py  test_18_bw_utils.py  test_19_source_edit.py  test_20_classrun.py  test_99_cleanup.py  test_bw_export.py  test_e2e_01_explore_codebase.py  test_e2e_02_greenfield_class.py  test_e2e_03_edit_existing.py  test_e2e_04_red_green_cycle.py  test_e2e_05_quality_gate.py  test_e2e_06_bw_explore.py  test_e2e_07_bw_system_ops.py  test_e2e_08_bw_lock_lifecycle.py  test_e2e_09_bw_dataflow_analysis.py
test/mcp/: test_mcp_server.cpp  test_mcp_tool_handlers.cpp  test_tool_registry.cpp
test/mocks/: mock_adt_session.hpp  mock_xml_codec.hpp
test/testdata/: activation_request.xml  activation_response.xml  cycle_config.yaml  discovery_response.xml  inactive_objects_response.xml  minimal_config.yaml  package_create_request.xml  package_create_response.xml  package_get_200.xml  package_get_404.xml  poll_completed.xml  poll_running.xml  pull_202_response.xml  repo_clone_request.xml  repo_clone_response.xml  repo_list_response.xml  repo_status_response.xml  valid_config.yaml
test/testdata/bw/: bw_activation.xml  bw_area_nodes.xml  bw_discovery.xml  bw_discovery_real.xml  bw_job_messages.xml  bw_job_progress.xml  bw_job_status.xml  bw_job_steps.xml  bw_lock.xml  bw_nodes.xml  bw_object_adso.xml  bw_object_dmod.xml  bw_object_dtp.xml  bw_object_dtp_complex.xml  bw_object_iobj.xml  bw_object_query.xml  bw_object_rsds.xml  bw_object_trfn.xml  bw_object_trfn_complex.xml  bw_search.xml  bw_transport.xml  bw_transport_collect.xml  bw_xref.xml  live_query_0D_FC_NW_C01_Q0007.xml  live_query_0D_FC_NW_C01_Q0007_parsed_after.json  live_query_0D_FC_NW_C01_Q0007_parsed_current.json
test/testdata/captured/: discovery_live.xml  package_get_404_live.xml  package_get_DMO_FLIGHT_200.xml  package_get_TMP_200.xml
test/testdata/checks/: atc_worklist.xml  atc_worklist_clean.xml
test/testdata/ddic/: package_contents.xml  table_sflight.xml
test/testdata/object/: class_metadata.xml  create_class_response.xml  lock_response.xml
test/testdata/search/: search_empty.xml  search_results.xml
test/testdata/source/: check_clean.xml  check_errors.xml
test/testdata/testing/: test_failures.xml  test_mixed_skip.xml  test_pass.xml  test_skipped_risk.xml
test/testdata/transport/: transport_list.xml
test/workflow/: test_deploy_workflow.cpp  test_lock_workflow.cpp
(+75 files in other folders)
