[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bin-to-wheel"
version = "0.1.0"
description = "Package pre-built binaries into Python wheels"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "DataZoo GmbH" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
]

[project.scripts]
bin-to-wheel = "bin_to_wheel:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires a real compiled binary",
]

[dependency-groups]
dev = ["pytest>=8.0"]
